--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 stolon_version: 0.7.0
 stolon_unarchive_prefix: /opt
-stolon_keeper_user: stolon_k
+stolon_keeper_user: stolon
 stolon_cluster_name: stolon-cluster
 stolon_store_backend: etcd
 etcd_cluster_group_name: etcd
