--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,5 +14,9 @@
   template: src=stolon-keeper.service dest=/etc/systemd/system/stolon-keeper.service owner=root group=root mode=0644
   notify: systemctl daemon-reload
 
+- name: force all notified handlers to run at this point, not waiting for normal sync points
+  meta: flush_handlers
+
 - name: enable stolon-keeper service
   service: name=stolon-keeper enabled=yes state=started
+  serial: 1
