--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,7 @@
-stolon_version: 0.7.0
+stolon_version: 0.9.0
 stolon_unarchive_prefix: /opt
 stolon_keeper_user: stolon
 stolon_cluster_name: stolon-cluster
 stolon_store_backend: etcd
 etcd_cluster_group_name: etcd
+etcd_client_port: 2379
